VLC flickers video when resizing window

Quick Information

  • This problem occurs on Ubuntu 20.04
  • It occurs with the latest stable VLC version 3.0.12.1 Snap and Flatpak | 3.0.9.2 if installed from official repositories on Ubuntu 20.04
  • I own an Intel Core i5, Intel HD Graphics 46000 laptop | Linux 5.8.0-50-generic 56~20.04.1-Ubuntu SMP x86_64 x86_64 x86_64 GNU/Linux

Steps to reproduce:

  • Install a fresh download of VLC (snap, flatpak, official repositories).
  • Play any mkv or mp4 video file.
  • While playing, try to resize the windows from any corner, vertically or horizontally.
  • VLC will show quick bursts of flickering.

It happens with mkv and mp4 files, haven't tried with other files. It does not crash or freezes the system completely.

Written Information

I have installed VLC on Ubuntu from official repositories, Flatpak, Snap, and each one of them have flickering issues the moment I ty to resize the window with both mkv, and mp4 files.

I have tried tweaking around with the output settings, disabling windows decorations, hardware-accelerated decoders and the Anti-Flickering option from the Tools - Advanced window. I have also tried to play with these settings under a Wayland session, but instead, it shows a black screen until I keep the window still.

I am familiar with the "Resize interface to video size" option so I do not have to worry about resizing, but with my current workflow, I have to resize the windows multiple times with different video formats and this visual glitch distracts me a lot.

This only happens when resizing, it does not happens when increasing volume or going full screen as mentioned in this issue.

I have also read this other issue on kwin, but I do not use Kubuntu.

flickering_example

Apologies in advance if this problem has been already reported in the past, but I still have not found any other mention of this problem outside of this repository.