xcb/x11: set northwest bit gravity on output window

This fixes black flickering on resize.

Fixes #25716 for xcb/x11 output.